--- a/About.html
+++ b/About.html
@@ -19,7 +19,7 @@
     <!-- =========================
          HERO (replaces first jumbotron)
          ========================= -->
-    <section class="hero p-4 mb-4 rounded-3 bg-body-tertiary">
+    <section class="hero p-4 mb-4 rounded-3">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-3">
         <!-- CTA column (was the image column) -->
         <div class="col-10 col-sm-8 col-lg-6 col-cta">
@@ -52,19 +52,19 @@
       </div>
     </section>
 
-<div class="jumbotron col-md-6 tools">
+<div class="jumbotron col-md-6 tools h-100 p-5 border rounded-3">
   <h2 class="mb-4">Tools & Controls</h2>
 
   <div class="d-grid gap-3">
 
     <button
-      id="resetFavorites"
+      id="openResetFavorites"
       class="btn btn-outline-danger btn-lg fade-in" style="animation-delay: 0.1s;">
       Reset Favorites
     </button>
 
     <button
-      id="resetStorage"
+      id="openResetStorage"
       class="btn btn-danger btn-lg fade-in" style="animation-delay: 0.2s;">
       Reset All Local Data
     </button>
@@ -82,7 +82,7 @@
 
       <!-- Right column: NAVGRID (replaced second jumbotron text with your nav grid) -->
       <div class="jumbotron col-md-6">
-        <div class="h-100 p-5 bg-body-tertiary border rounded-3">
+        <div class="h-100 p-5 border rounded-3">
           <h2 class="mb-3">Navigation</h2>
 
           <div class="row row-cols-1 row-cols-sm-2 g-4 nav-grid">
