--- a/Favorites.html
+++ b/Favorites.html
@@ -165,7 +165,7 @@
         <p class="mb-0">This will remove all saved favorites stored locally in your browser. This action cannot be undone.</p>
       </div>
       <div class="modal-footer flex-nowrap p-0">
-        <button id="resetFavorites" type="button" class="btn btn-lg fs-6 text-white col-6 py-3 m-0 rounded-0 btn-danger">
+        <button id="openResetFavorites" type="button" class="btn btn-lg fs-6 text-white col-6 py-3 m-0 rounded-0 btn-danger">
           <strong>Yes, clear favorites</strong>
         </button>
         <button type="button" id="cancelFavorites" class="btn btn-lg btn-link fs-6 text-decoration-none col-6 py-3 m-0 rounded-0" data-bs-dismiss="modal">
