--- a/About.html
+++ b/About.html
@@ -20,7 +20,7 @@
          HERO (replaces first jumbotron)
          ========================= -->
     <section class="hero p-4 mb-4 rounded-3">
-      <div class="row flex-lg-row-reverse align-items-center g-5 py-3">
+      <div class="jumbotron flex-lg-row-reverse align-items-center g-5 py-3">
         <!-- CTA column (was the image column) -->
         <div class="col-10 col-sm-8 col-lg-6 col-cta">
           <div class="hero-buttons">
@@ -32,9 +32,7 @@
             <a href="https://paypal.me/AhmedSukkary/5" class="btn btn-outline-secondary btn-lg btn-equal" target="_blank" rel="noopener noreferrer">
               Donate via PayPal
             </a>
-            <!-- small helper text -->
-            <small class="text-muted text-center">Support & links. No pressure — just in case someone wants to help.</small>
-          </div>
+           </div>
         </div>
 
         <!-- Text column -->
@@ -51,7 +49,7 @@
         </div>
       </div>
     </section>
-
+    <section>
 <div class="jumbotron col-md-6 tools h-100 p-5 border rounded-3">
   <h2 class="mb-4">Tools & Controls</h2>
 
@@ -138,10 +136,11 @@
 
   </div>
 </main>
-<footer class="footer justify-content-md-start align-items-center mt-auto py-3 bg-body-tertiary">
+<footer class="alt-footer justify-content-md-start align-items-center mt-auto py-3 bg-body-tertiary">
   <div class="container text-center">
     <span class="text-muted">© 2024 Zeyad A.S.  |  Built With Bootstrap</span>
   </div>
+  </section>
 <div class="modal fade" id="heroModal" tabindex="-1" aria-labelledby="heroModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
