--- a/About.html
+++ b/About.html
@@ -49,7 +49,7 @@
         </div>
       </div>
     </section>
-    <section>
+    <section class="col-12 ">
 <div class="jumbotron col-md-6 tools h-100 p-5 border rounded-3">
   <h2 class="mb-4">Tools & Controls</h2>
 
