--- a/About.html
+++ b/About.html
@@ -20,7 +20,7 @@
          HERO (replaces first jumbotron)
          ========================= -->
     <section class="hero p-4 mb-4 rounded-3">
-      <div class="jumbotron flex-lg-row-reverse align-items-center g-5 py-3">
+      <div class="flex-lg-row-reverse align-items-center g-5 py-3">
         <!-- CTA column (was the image column) -->
         <div class="col-10 col-sm-8 col-lg-6 col-cta">
           <div class="hero-buttons">
