--- a/About.html
+++ b/About.html
@@ -49,7 +49,10 @@
         </div>
       </div>
     </section>
-    <section class="col-12 ">
+    <section class="container mb-4">
+    <div class="row g-4">
+
+      <!-- Left column: TOOLS -->
 <div class="jumbotron col-md-6 tools h-100 p-5 border rounded-3">
   <h2 class="mb-4">Tools & Controls</h2>
 
@@ -133,6 +136,7 @@
         </div>
       </div>
     </div>
+  </section>
 
   </div>
 </main>
@@ -140,7 +144,7 @@
   <div class="container text-center">
     <span class="text-muted">© 2024 Zeyad A.S.  |  Built With Bootstrap</span>
   </div>
-  </section>
+  </footer>
 <div class="modal fade" id="heroModal" tabindex="-1" aria-labelledby="heroModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
