--- a/article.html
+++ b/article.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="style.css">
         <style>  
           .news-item img {
-            max-width: 60%; !important;
+            max-width: 60% !important;
             height: auto;
             margin-bottom: 15px;
           }
