--- a/About.html
+++ b/About.html
@@ -19,7 +19,7 @@
     <!-- =========================
          HERO (replaces first jumbotron)
          ========================= -->
-    <section class="hero p-4 mb-4 rounded-3">
+    <section class="hero p-4 mb-4 rounded-3 border">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-3">
         <!-- CTA column (was the image column) -->
         <div class="col-10 col-sm-8 col-lg-6 col-cta">
