--- a/About.html
+++ b/About.html
@@ -38,15 +38,14 @@
         <!-- Text column -->
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold lh-1 mb-2">About</h1>
-          <h2 class="h5 text-body-secondary mb-3">Zeyad A.S. — ZAS</h2>
+          <h2 class="h5 mb-3">Zeyad A.S. — ZAS</h2>
 
           <p class="lead">
             This site is a concise home for curated content, tools, and small experiments — built to be fast, readable, and useful.
             No filler. You’ll find links, quick features, and accessibility options here — everything arranged to be practical.
           </p>
 
-          <p class="mb-0 text-muted">Quick actions are in the panel to the right (or below, on mobile). Navigation and site tools are further down.</p>
-        </div>
+          </div>
       </div>
     </section>
     <section class="container mb-4">
@@ -59,25 +58,26 @@
 
   <div class="d-grid gap-3">
 
+    <button id="theme-switch" title="Switch" class="justify-content-center mt-5 mb-2 btn button fade-in" style="animation-delay: 0.4s;">            
+    <svg xmlns="http://www.w3.org/2000/svg" alt="modeswitch" title="Switch to Dark" height="50px" viewBox="0 -960 960 960" width="50px" fill="var(--fillcolor)"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Z"/></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" alt="modeswitch" title="Switch to Light" height="50px" viewBox="0 -960 960 960" width="50px" fill="var(--fillcolor)"><path d="M480-280q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Z"/></svg>
+    </button>
+
+    <button data-bs-toggle="modal" data-bs-target="#heroModal" class="btn button my-2 btn-outline-secondary justify-content-center text-white fade-in" style="animation-delay: 0.5s;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-circle" viewBox="0 0 16 16"><path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/><path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286m1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94"/></svg>
+    </button>
+
     <button
       id="openResetFavorites"
-      class="btn btn-outline-danger btn-lg fade-in" style="animation-delay: 0.1s;">
+      class="btn my-2 btn-outline-danger btn-lg fade-in" style="animation-delay: 0.1s;">
       Reset Favorites
     </button>
 
     <button
       id="openResetStorage"
-      class="btn btn-danger btn-lg fade-in" style="animation-delay: 0.2s;">
+      class="btn my-2 btn-outline-danger btn-lg fade-in" style="animation-delay: 0.2s;">
       Reset All Local Data
     </button>
 
-    <button id="theme-switch" title="Switch" class="justify-content-center theme-switch-alt btn button fade-in" style="animation-delay: 0.4s;">            
-    <svg xmlns="http://www.w3.org/2000/svg" alt="modeswitch" title="Switch to Dark" height="50px" viewBox="0 -960 960 960" width="50px" fill="var(--fillcolor)"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Z"/></svg>
-    <svg xmlns="http://www.w3.org/2000/svg" alt="modeswitch" title="Switch to Light" height="50px" viewBox="0 -960 960 960" width="50px" fill="var(--fillcolor)"><path d="M480-280q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Z"/></svg>
-    </button>
-
-    <button data-bs-toggle="modal" data-bs-target="#heroModal" class="btn button btn-outline-secondary justify-content-center text-white fade-in" style="animation-delay: 0.5s;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-circle" viewBox="0 0 16 16"><path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/><path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286m1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94"/></svg>
-    </button>
     </div>
   </div>
       </div>
