--- a/Favorites.html
+++ b/Favorites.html
@@ -30,7 +30,7 @@
           <img src="pics/Logo.svg" alt="Logo" style="width: 65px; height: auto;">
           <h2 class="fw-bold">Your Favorites</h2>
         <p>Here you can see all the items you've saved. Use the button below to clear them if you want a fresh start.</p>
-        <a id="resetFavorites" class="button btn">Clear Favorites</a>
+        <a id="openResetFavorites" class="button btn">Clear Favorites</a>
       </div>
       
               <div class="col">
