--- a/article.html
+++ b/article.html
@@ -39,7 +39,7 @@
     </svg>
 </button>
 
-<header class="py-3 mb-4 border-bottom">
+<header class="py-3 mb-4">
     <div class="container d-flex flex-wrap justify-content-center align-items-center">
         <a class="logo d-flex align-items-center mb-3 mb-lg-0 me-lg-auto link-body-emphasis text-decoration-none" href="ZAS-News.html">
             <img src="pics/Logo.svg" class="logo slide-in-left" alt="Logo">
@@ -88,7 +88,7 @@
 
 </main>
 
-<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+<footer class="d-flex flex-nowrap justify-content-between align-items-center py-3 my-4">
   <button data-bs-toggle="modal" data-bs-target="#heroModal" class="btn btn-outline-secondary col-md-1 justify-content-center text-white"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-circle" viewBox="0 0 16 16">
   <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
   <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286m1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94"/>
@@ -99,7 +99,7 @@
     <img src="pics/Logo.svg" class="logo slide-in-left" alt="Logo" width="40" height="40">
   </a>
 
-  <ul class="nav col-md-5 justify-content-end">
+  <ul class="nav col-md-4 justify-content-end">
     <li class="nav-item"><a href="ZAS-News.html" class="nav-link px-2 secondarytext">Home</a></li>
     <li class="nav-item"><a href="Discover.html" class="nav-link px-2 secondarytext">Discover</a></li>
     <li class="nav-item"><a href="About.html" class="nav-link secondarytext px-2 ">About us</a></li>
