--- a/ZAS-News.html
+++ b/ZAS-News.html
@@ -90,9 +90,9 @@
 
 
         <section class="featured-news">
-          <h2 class=fade-in><b>Featured News</b></h2>
+          <h2 class="fade-in d-flex"><b>Featured News</b></h2>
 
-          <div class="slide-in-left maintext alert">
+          <div class="slide-in-left maintext d-none alert">
           <span class="fade-in closebtn" onclick="closeAlert(this)">&times;</span>
  
             Info on this website may not be factually accurate,
