--- a/article.html
+++ b/article.html
@@ -72,7 +72,7 @@
     <section class="d-flex mt-4 justify-content-center mb-4 row" id="main-section">
         <article class="col-12 news-item col-md-8" style="flex-grow: 1;">
             <h1 id="article-title"></h1>
-           <div> <h5 id="author"></h5><h5 id="article-date"></h5></div><br>
+           <div class="row d-flex p-2 category-text"> <h5 id="author"></h5><h5 id="article-date"></h5></div><br>
             <img id="image" src="none.png" alt="Article Image" width="65%">
             <div id="article-content"></div>
         </article>
