--- a/article.html
+++ b/article.html
@@ -70,7 +70,7 @@
 
 <main>
     <section class="d-flex mt-4 justify-content-center mb-4 row" id="main-section">
-        <article class="col-12 news-item col-md-8" style="flex-grow: 1;">
+        <article class="col-12 news-item col-md-12" style="flex-grow: 1;">
             <h1 id="article-title"></h1>
            <div class="row d-flex p-2 category-text mt-2 align-items-center justify-content-between"> <h5 id="author" class="col-md-6 justify-content-start"></h5><h5 id="article-date" class="col-md-6 justify-content-end"></h5></div><br>
             <img id="image" src="none.png" alt="Article Image" width="65%">
@@ -78,7 +78,7 @@
         </article>
 
 
-<div class="sidebar dummy-class col-12 ms-1 col-md-4">
+<div class="sidebar dummy-class col-12 ms-1 mt-3 col-md-4">
             <div class="sidebar-container p-4 mb-3 bg-body-tertiary rounded">
   <h4 class="fst-italic">Related Posts</h4>
                  <ul class="recent-posts row list-unstyled mb-0">
