--- a/article.html
+++ b/article.html
@@ -69,12 +69,12 @@
 
 
 <main>
-    <section class="d-flex mt-4 justify-content-center mb-4 row" id="main-section">
+    <section class="d-flex mt-4 justify-content-center mb-4 row" id="main-section">8
         <article class="col-12 news-item col-md-8" style="flex-grow: 1;">
             <h1 id="article-title"></h1>
-            <div class="d-flex w-100 p-2 category-text mt-2">
-              <h5 id="author" class="mb-0"></h5>
-              <h5 id="article-date" class="mb-0 ms-auto"></h5>
+            <div class="d-flex w-100 p-2 mb-2 mt-2">
+              <h5 id="author" class=" category-text mb-0"></h5>
+              <h5 id="article-date" class="mb-0  category-text border border-3 ms-auto"></h5>
             </div>
             <img id="image" src="none.png" alt="Article Image" width="65%">
             <div id="article-content"></div>
