--- a/article.html
+++ b/article.html
@@ -73,8 +73,8 @@
         <article class="col-12 news-item col-md-8" style="flex-grow: 1;">
             <h1 id="article-title"></h1>
             <div class="d-flex w-100 p-2 mb-2 mt-2">
-              <h5 id="author" class=" category-text mb-0"></h5>
-              <h5 id="article-date" class="mb-0  category-text border border-3 ms-auto"></h5>
+              <h5 id="author" class="border-2 mb-0"></h5>
+              <h5 id="article-date" class="mb-0 border-2 ms-auto"></h5>
             </div>
             <img id="image" src="none.png" alt="Article Image" width="65%">
             <div id="article-content"></div>
