--- a/article.html
+++ b/article.html
@@ -71,13 +71,21 @@
 <main>
     <section class="d-flex mt-4 justify-content-center mb-4 row" id="main-section">8
         <article class="col-12 news-item col-md-8" style="flex-grow: 1;">
-            <h1 id="article-title"></h1>
+            <h1 id="article-title">
+            <!-- Title will be injected here -->
+            </h1>
             <div class="d-flex w-100 p-2 mb-2 mt-2">
-              <h5 id="author" class="border-2 mb-0"></h5>
-              <h5 id="article-date" class="mb-0 border-2 ms-auto"></h5>
+              <h5 id="author" class="border-2 mb-0">
+              <!-- Author will be injected here -->
+              </h5>
+              <h5 id="article-date" class="mb-0 border-2 ms-auto">
+              <!-- Date will be injected here -->
+              </h5>
             </div>
             <img id="image" src="none.png" alt="Article Image" width="65%">
-            <div id="article-content"></div>
+            <div id="article-content">
+            <!-- Article content will be injected here -->
+            </div>
         </article>
 
 
